// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prco-check-status for oneguard when encountering a server error should return fomatted report with message: Server error 1`] = `
"
prco-check-status
server: oneguard
environment: test

---
Server error for request id: 15748


Finished

"
`;

exports[`prco-check-status for oneguard when passed a valid request and paths that have spaces should return fomatted report with one entry 1`] = `
"
prco-check-status
server: oneguard
environment: test

---
requestId: 15748
status: closed
state: 7
message: Inspection Request Complete
report: https://test.oneguardinspections.com/components/com_rstickets/files/2020/05/04/PRCOTEST7/PRCO TEST-0000000007_PDF_Report.pdf

Finished

"
`;

exports[`prco-check-status for oneguard when passed a valid request should return fomatted report with one entry 1`] = `
"
prco-check-status
server: oneguard
environment: test

---
requestId: 15748
status: closed
state: 7
message: Inspection Request Complete
report: https://test.oneguardinspections.com/components/com_rstickets/files/2020/05/04/PRCOTEST7/PRCO TEST-0000000007_PDF_Report.pdf

Finished

"
`;

exports[`prco-check-status for oneguard when passed an invalid request should return fomatted report with one message: Status unavailable 1`] = `
"
prco-check-status
server: oneguard
environment: test

---
Status unavailable for: 838317



Finished

"
`;

exports[`prco-check-status for oneguard when passed multiple invalid requests should return fomatted report with mutiple messages: Status unavailable 1`] = `
"
prco-check-status
server: oneguard
environment: test

---
Status unavailable for: 838317



---
Status unavailable for: 838317



Finished

"
`;

exports[`prco-check-status for oneguard when passed multiple valid requests should return fomatted report with mutiple entrys 1`] = `
"
prco-check-status
server: oneguard
environment: test

---
requestId: 15748
status: closed
state: 7
message: Inspection Request Complete
report: https://test.oneguardinspections.com/components/com_rstickets/files/2020/05/04/PRCOTEST7/PRCO TEST-0000000007_PDF_Report.pdf

---
requestId: 15748
status: closed
state: 7
message: Inspection Request Complete
report: https://test.oneguardinspections.com/components/com_rstickets/files/2020/05/04/PRCOTEST7/PRCO TEST-0000000007_PDF_Report.pdf

Finished

"
`;
